# fantasy-ai

./: .gitignore  CLAUDE.md  STATUS.md  advisor.py  config.example.py  context.py  fantasypros.py  leagues.py  nfl_stats.py  pyproject.toml  requirements.txt  scheduler.py  sleeper.py  weather.py
_deferred/synthesis_pipeline/: DATA_TOKEN_VOCABULARY_TEMPLATE.md  FIRST_PASS_PROMPT_v2.md  README.md  SECOND_PASS_PROMPT_v2.md
_deprecated/: scheduler.py  sleeper.py
application/: README.md  __init__.py  config.example.py  odds.py  requirements.txt  weather.py
application/ai/: __init__.py  check_manager_dossiers.py  check_ros_synthesis.py  check_team_news_dossier.py  client.py  dossier_prompt.py  news_prompt.py  ros_synthesis_prompt.py  write_manager_dossiers.py  write_ros_synthesis.py  write_team_news_dossier.py
application/data/: __init__.py  data_layer.py
application/design_playground/: index.html  package-lock.json  package.json
application/frontend/: index.html  package-lock.json  package.json  vite.config.js
application/shared/: __init__.py  league_registry.py  league_resolver.py
project_management/: PRODUCT_ROADMAP.md  PROJECT_OVERVIEW.md  TECHNICAL_ARCHITECTURE.md  data_sources.txt
project_management/LLM context/: 710_AUDIT.md  712_BACKEND_AUDIT.md  STATUS.md  TECHNICAL_ARCHITECTURE.md
project_management/co-build guides/: POST_CODE_GUIDE.md  PRE_CODE_GUIDE.md  SESSION_GUIDE.md
project_management/journal/: 2026-05-08-final-sweep.md  (+5 more)
scripts/: worktree-close.sh  worktree-setup.sh
transcripts/: SECOND_PASS_MERGE_PROMPT_v2.md  THIRD_PASS_PROMPT_v2.md
(+345 files in other folders)
